// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RobotsScreen> when receives data from URL when search field has text renders only results that match search 1`] = `
<div
  className="tc"
>
  <h1
    className="f1"
  >
    Robofriends
  </h1>
  <div
    className="pa2"
  >
    <input
      className="pa3 ba b--green bg-lightest-blue"
      onChange={[Function]}
      placeholder="Search robots"
      type="search"
    />
  </div>
  <div
    style={
      Object {
        "height": "800px",
        "overflow": "scroll",
      }
    }
  >
    Array [
      <div
        className="tc bg-light-green dib br3 pa3 ma2 grow bw2 shadow-5"
      >
        <img
          alt="robots"
          src="https://robohash.org/1?200x200"
        />
        <div>
          <h2>
            default
          </h2>
          <p>
            default@email1.com
          </p>
        </div>
      </div>,
      <div
        className="tc bg-light-green dib br3 pa3 ma2 grow bw2 shadow-5"
      >
        <img
          alt="robots"
          src="https://robohash.org/2?200x200"
        />
        <div>
          <h2>
            ninja
          </h2>
          <p>
            email@email2.com
          </p>
        </div>
      </div>,
    ]
  </div>
</div>
`;

exports[`<RobotsScreen> when receives data from URL when search field is empty renders all results 1`] = `
<div
  className="tc"
>
  <h1
    className="f1"
  >
    Robofriends
  </h1>
  <div
    className="pa2"
  >
    <input
      className="pa3 ba b--green bg-lightest-blue"
      onChange={[Function]}
      placeholder="Search robots"
      type="search"
    />
  </div>
  <div
    style={
      Object {
        "height": "800px",
        "overflow": "scroll",
      }
    }
  >
    Array [
      <div
        className="tc bg-light-green dib br3 pa3 ma2 grow bw2 shadow-5"
      >
        <img
          alt="robots"
          src="https://robohash.org/1?200x200"
        />
        <div>
          <h2>
            default
          </h2>
          <p>
            default@email1.com
          </p>
        </div>
      </div>,
      <div
        className="tc bg-light-green dib br3 pa3 ma2 grow bw2 shadow-5"
      >
        <img
          alt="robots"
          src="https://robohash.org/2?200x200"
        />
        <div>
          <h2>
            ninja
          </h2>
          <p>
            email@email2.com
          </p>
        </div>
      </div>,
      <div
        className="tc bg-light-green dib br3 pa3 ma2 grow bw2 shadow-5"
      >
        <img
          alt="robots"
          src="https://robohash.org/3?200x200"
        />
        <div>
          <h2>
            robot
          </h2>
          <p>
            email@email3.com
          </p>
        </div>
      </div>,
    ]
  </div>
</div>
`;

exports[`<RobotsScreen> when receives empty data from URL renders correctly 1`] = `
<div
  className="tc"
>
  <h1
    className="f1"
  >
    Robofriends
  </h1>
  <div
    className="pa2"
  >
    <input
      className="pa3 ba b--green bg-lightest-blue"
      onChange={[Function]}
      placeholder="Search robots"
      type="search"
    />
  </div>
  <div
    style={
      Object {
        "height": "800px",
        "overflow": "scroll",
      }
    }
  />
</div>
`;
